<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">jeap企业应用</string>
    <string name="login_label_username">账号</string>
    <string name="login_username_hint">请输入账号</string>
    <string name="login_password_hint">请输入密码</string>
    <string name="login_label_password">密码</string>
    <string name="loginBtn">登录</string>
    <string name="login_register_link">没有帐号？ <a href="#">注册</a></string>
    <string name="main_title">主界面</string>
</resources>
