<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:background="@drawable/background_login"
        >
    <RelativeLayout
            android:id="@+id/login_div"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:layout_margin="15dp"
            android:background="@drawable/background_login_div_bg">
        <TextView
                android:id="@+id/login_user_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="5dp"
                android:text="@string/login_label_username"
                style="@style/normalText"
               />
        <EditText
                android:id="@+id/username"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_username_hint"
                android:layout_below="@+id/login_user_label"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                android:inputType="text"/>
        <TextView
                android:id="@+id/login_password_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/username"
                android:layout_marginTop="3dp"
                android:text="@string/login_label_password"
                style="@style/normalText"
                />
        <EditText
                android:id="@+id/password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_password_hint"
                android:layout_below="@+id/login_password_label"
                android:password="true"
                android:singleLine="true"
                android:inputType="numberPassword"/>
        <Button
                android:id="@+id/loginBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/password"
                android:layout_alignRight="@id/password"
                android:text="@string/loginBtn"
                android:background="@drawable/blue_button"
                android:onClick="login"/>
    </RelativeLayout>
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView  android:id="@+id/register_link"
                   android:text="@string/login_register_link"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginLeft="15dp"
                   android:textColor="#888"
                   android:textColorLink="#FF0066CC"
                />
        <ImageView
                android:id="@+id/miniTwitter_logo"
                android:src="@drawable/cat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginRight="25dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="25dp"/>
        <ImageView android:src="@drawable/logo"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_toLeftOf="@id/miniTwitter_logo"
                   android:layout_alignBottom="@id/miniTwitter_logo"
                   android:paddingBottom="8dp"
                />
    </RelativeLayout>
</LinearLayout>

